# genomes

./: README.md  pyproject.toml
.dvc/: config
GRCh37/: .gitignore  README.md  assembly_report.txt  dvc.yaml  genomic.fna.chromosomes.yaml  genomic.fna.dvc  split.py
